--- a/templates/index.html
+++ b/templates/index.html
@@ -236,7 +236,7 @@
 
 <div style="margin-left: 27rem;">
     <a href=""><span style="color: #525459;">Cancel</span></a>
-    <a style="background-color: #3E97FF;border: 1px solid #3E97FF;padding-left:  0.8rem;padding-right:  0.8rem;padding-top:  0.6rem;padding-bottom:  0.6rem;border-radius: 5px;"><span style="color: white;font-weight: 600;">Save</span></a>
+    <a style="background-color: #3E97FF;border: 1px solid #3E97FF;padding-left:  0.8rem;padding-right:  0.8rem;padding-top:  0.6rem;padding-bottom:  0.6rem;border-radius: 5px;margin-left: 1rem;"><span style="color: white;font-weight: 600;">Save</span></a>
 </div>
     </form>
 
